more contrast fixes

--- a/static/styles.css
+++ b/static/styles.css
@@ -118,7 +118,7 @@ p code {
   line-height: 1.5em;
 
   font-weight: 200;
-  color: #666;
+  color: #585858;
 }
 
 .body {
@@ -220,7 +220,7 @@ a, a:visited,
 .table-of-contents a.module,
 .project-listing a,
 .main a, .main a:visited {
-  color: #0070c9;
+  color: #025aa0;
 }
 
 .right-blank {
